--- a/style.css
+++ b/style.css
@@ -1,10 +1,103 @@
+/* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
+/* Global Styles */
 * {
   box-sizing: border-box;
   font-family: Roboto;
 }
 
+body {
+  margin: 0;
+}
+
+/* Typography */
+h1 {
+  font-weight: 900;
+  color: #F9FAF8;
+}
+
+/* Links and Lists */
+ul,
+a {
+  list-style-type: none;
+  text-decoration: none;
+  display: flex;
+  gap: 8px;
+  color: white;
+  margin: 0 4px;
+  font-weight: 300;
+  font-size: 16px;
+  transition: color 0.3s;
+}
+
+a:hover {
+  color: rgb(184, 182, 182);
+}
+
+/* Navigation */
+nav {
+  background-color: #1F2937;
+  width: 100vw;
+  padding-inline: 16px;
+}
+
 .logo {
   font-family: Audiowide;
+  color: white;
+}
+
+/* Containers */
+.container {
+  max-width: 80vw;
+  padding: 0 16px;
+  margin: 0 auto;
+}
+
+.container.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.container.hero {
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  margin-top: auto;
+  margin-bottom: auto;
+  height: 60%;
+  width: 70%;
+}
+
+@media (max-width: 768px) {
+  .container.hero {
+
+  }
+}
+
+/* Sections */
+.section {
+  width: 100%;
+  height: 50svh;
+}
+
+/* Dark Section */
+.dark {
+  background-color: #1F2937;
+  display: flex;
+  /* justify-content: space-between; */
+}
+
+/* Hero Section */
+.hero-content {
+  margin-right: 32px;
+  min-width: 30svw;
+  max-width: 40svw;
+}
+
+.hero-img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
 }
