--- a/style.css
+++ b/style.css
@@ -2,24 +2,105 @@
 @import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* Global Styles */
-* {
+/* Box sizing rules */
+*,
+*::before,
+*::after {
   box-sizing: border-box;
-  font-family: Roboto;
+  /* border: 2px solid red; */
 }
 
-body {
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
   margin: 0;
 }
 
+/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
+ul[role='list'],
+ol[role='list'] {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+   scroll-behavior: auto;
+  }
+  
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
 /* Typography */
 h1 {
+  font-family: Roboto;
+  font-size: 40px;
   font-weight: 900;
   color: #F9FAF8;
+  line-height: 1.2;
+  margin-bottom: 12px;
+}
+
+h2,
+h3 {
+  font-family: Roboto;
+}
+
+p {
+  font-family: Roboto;
+  margin-bottom: 12px;
 }
 
 /* Links and Lists */
 ul,
 a {
+  font-family: Roboto;
   list-style-type: none;
   text-decoration: none;
   display: flex;
@@ -40,17 +121,19 @@ nav {
   background-color: #1F2937;
   width: 100vw;
   padding-inline: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 .logo {
   font-family: Audiowide;
   color: white;
+  margin-left: 0;
 }
 
 /* Containers */
 .container {
-  max-width: 80vw;
-  padding: 0 16px;
+  width: min(1100px, 100% - 2rem);
   margin: 0 auto;
 }
 
@@ -63,11 +146,9 @@ nav {
 .container.hero {
   color: white;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   margin-top: auto;
   margin-bottom: auto;
-  height: 60%;
-  width: 70%;
 }
 
 @media (max-width: 768px) {
@@ -77,27 +158,101 @@ nav {
 }
 
 /* Sections */
-.section {
-  width: 100%;
-  height: 50svh;
-}
+/* .section {
+  height: 100vh;
+} */
 
 /* Dark Section */
 .dark {
   background-color: #1F2937;
   display: flex;
+  height: 50svh;
   /* justify-content: space-between; */
 }
 
 /* Hero Section */
 .hero-content {
-  margin-right: 32px;
-  min-width: 30svw;
+  margin-right: 2rem;
+  line-height: 1.4;
   max-width: 40svw;
+  align-self: center;
+  /* min-width: 30svw;
+  max-width: 40svw; */
 }
 
 .hero-img {
-  width: 100%;
-  height: auto;
+  width: 34.375rem;
+  height: 20.3125rem;
+  flex-shrink: 0;
+ 
+}
+
+button {
+  border: none;
+  padding: 12px 16px;
+  margin-top: 12px;
+  margin-bottom: 12px;
+  border-radius: 8px;
+  background-color: #3b82f6;
+  font-family: Roboto;
+  font-weight: 400;
+  color: white;
+  font-size: 16px;
+}
+
+h3 {
+  text-align: center;
+  margin: 16px;
+}
+
+.container.card {
+  display: flex;
+  gap: 4px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+img {
+  width: 16.9125rem;
+  height: 21.14063rem;
+  flex-shrink: 0;
   object-fit: cover;
 }
+
+.card {
+  height: auto;
+}
+
+.section.card {
+  height: 60vh;
+  padding: 0;
+  margin: 0;
+}
+
+.section {
+  height: 50vh;
+}
+
+.card > img {
+  border: 4px solid #1F2937;
+  border-radius: 8px;
+}
+
+.card > img:nth-child(1) {
+  width: 16.9125rem;
+  height: 21.14063rem;
+}
+
+.card > h3,
+.card > p {
+  margin: 8px;
+  text-align: center;
+}
+
+#card-info {
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 1.2;  
+  margin: 24px;
+}
+
