--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ nav {
 }
 
 button {
-  border: none;
+  border: #1F2937;
   padding: 12px 16px;
   margin-top: 12px;
   margin-bottom: 12px;
@@ -256,3 +256,79 @@ img {
   margin: 24px;
 }
 
+.section.dark-white {
+  height: 50vh;
+  background-color: #e5e7eb;
+}
+
+.container.quote {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 16px
+}
+
+.quote {
+  font-family: Roboto;
+  font-size: 44px;
+  font-style: italic;
+  font-weight: 300;
+  line-height: 1.1;
+}
+
+.quote.autor {
+  align-self: flex-end;
+  font-size: 24px;
+  font-weight: 800;
+  font-style: normal;
+  margin-right: 24px;
+}
+
+.cta-section {
+  background-color:#3b82f6;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 200px;
+  border-radius: 8px;
+  padding: 24px 48px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.cta-content {
+  color: white;
+  text-align: left;
+}
+
+.cta-heading {
+  margin: 0;
+  text-align: left;
+}
+
+#cta-btn {
+  border: 2px solid #F9FAF8;
+}
+
+.section.cta {
+  display: flex;
+  align-items: center;
+  height: 40svh;
+  background-color:#ffffff;
+}
+
+.copyright-txt {
+  color: white;
+  font-family: Roboto;
+  font-weight: 300;
+  font-size: small;
+}
+
+.section.footer {
+  height: 10svh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
